fixed buttons alignment

--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,7 @@ a:link, a:visited {
         border-radius: 15px;
         border: 2px solid #000;
         font-size: 1.5rem;
+        text-align: center;
     }
 }
 
